--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nyc": "^15.1.0"
   },
   "dependencies": {
-    "jshint": "^2.13.4"
+    "jshint": "^2.13.4",
+    "sinon": "^14.0.0"
   }
 }
