--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-google": "^0.14.0",
     "jscpd": "^3.4.5",
     "mocha": "^9.2.2",
+    "mocha-sinon": "^2.1.2",
     "nyc": "^15.1.0"
   },
   "dependencies": {
